--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.8
 
 COPY docker/requirements.txt /
 
-RUN pip install --upgrade \ 
-pip install -r requirements.txt
+# RUN pip install --upgrade
+RUN pip install -r requirements.txt
 
 
 WORKDIR "/code"
